--- a/linear regression/linear regression.ipynb
+++ b/linear regression/linear regression.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "6d94147a-2600-4c72-b80e-f22349438933",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "eda4a0c1-3e4c-4c55-a4db-4ed6b14730a9",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4  396.90  5.33  36.2  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d426a7b9-71b5-4e28-9352-b62bb510ce12",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "03497003-54d0-4fc0-b69f-c815c8a54508",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "4     18.7  396.90   5.33  36.2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,9 +382,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77b4a887-cd69-4e90-85b4-2043381fa268",
+   "metadata": {},
+   "source": [
+    "###### Finally we have the dataset with proper column names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51a6a997-c04d-4794-8ee8-31eb58515634",
+   "metadata": {},
+   "source": [
+    "EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d63c51b-621b-4e82-96f9-fd36a2578a3b",
+   "metadata": {},
+   "source": [
+    "###### Now, we'll explore more about our dataset in-hand. Really important to observe certain characteristics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24488a49-af63-44fe-9090-46457f7b25a6",
+   "metadata": {},
+   "source": [
+    "###### 1. data types for each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2d40e795-3f97-4aea-aa1f-45bfe8130028",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 506 entries, 0 to 505\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   CRIM     506 non-null    float64\n",
+      " 1   ZN       506 non-null    float64\n",
+      " 2   INDUS    506 non-null    float64\n",
+      " 3   CHAS     506 non-null    int64  \n",
+      " 4   NOX      506 non-null    float64\n",
+      " 5   RM       506 non-null    float64\n",
+      " 6   AGE      506 non-null    float64\n",
+      " 7   DIS      506 non-null    float64\n",
+      " 8   RAD      506 non-null    int64  \n",
+      " 9   TAX      506 non-null    float64\n",
+      " 10  PTRATIO  506 non-null    float64\n",
+      " 11  B        506 non-null    float64\n",
+      " 12  LSTAT    506 non-null    float64\n",
+      " 13  MEDV     506 non-null    float64\n",
+      "dtypes: float64(12), int64(2)\n",
+      "memory usage: 55.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eb325cf-02c4-4dbc-8751-3b6d9a04e624",
+   "metadata": {},
+   "source": [
+    "###### We can see that all the columns containing only numerical data without any string, object or categorical types."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b6c803-a22b-4b7f-84ef-db2639d88263",
+   "metadata": {},
+   "source": [
+    "###### 2. Now, let's see what each of these columns actually mean"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea4bbf8f-6947-40c9-98bd-28843190dcaf",
+   "id": "dc5c751d-eb1d-4195-a70d-dc9038ee73c5",
    "metadata": {},
    "outputs": [],
    "source": []
