--- a/linear regression/linear regression.ipynb
+++ b/linear regression/linear regression.ipynb
@@ -956,9 +956,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56472740-abbf-4d93-8557-6b7a6031bcba",
+   "metadata": {},
+   "source": [
+    "###### from the matrix, it's evident that our observation is correct as RM has the highest correlation value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "803922ba-e365-4e98-97b5-2e2c0636a403",
+   "metadata": {},
+   "source": [
+    "###### Now let's see a very basic linear regression model using gradient descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "04949ab6-36fd-44b9-83fc-e8b1ee428689",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinearRegressionGD:\n",
+    "    def __init__(self, eta=0.001, n_iter=20):\n",
+    "        self.eta = eta\n",
+    "        self.n_iter = n_iter\n",
+    "\n",
+    "    def net_input(self, X):\n",
+    "        return np.dot(X, self.w_[1:]) + self.w_[0]\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self.w_ = np.zeros(1+X.shape[1])\n",
+    "        self.cost_ = []\n",
+    "\n",
+    "        for i in range(self.n_iter):\n",
+    "            output = self.net_input(X)\n",
+    "            errors = (y - output)\n",
+    "            self.w_[1:] += self.eta * X.T.dot(errors)\n",
+    "            self.w_[0] += self.eta * errors.sum()\n",
+    "            cost = (errors**2).sum() / 2.0\n",
+    "            self.cost_.append(cost)\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return self.net_input(X)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0ac2fa-4578-47b7-810b-716df9ff8f37",
+   "id": "c2929baa-c6e8-4b57-a841-37e5ddf21492",
    "metadata": {},
    "outputs": [],
    "source": []
